getting data from API and displaying it on screen

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,7 +1,9 @@
 <main>
   <app-navbar />
   <div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
-    <!-- Your content -->
+    <div *ngFor="let password of passwords">
+      {{password.name}}
+    </div>
   </div>
 </main>
 
