--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,9 +1,14 @@
 <main>
   <app-navbar />
+  <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8 flex flex-row-reverse">
+    <input type="text" id="filter" placeholder="Search" [(ngModel)]="filter"
+      class="block w-full md:w-1/3 rounded-md border-0 p-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+  </div>
   <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
-    <app-cards (refreshPasswords)="fetchPasswords" *ngFor="let password of passwords" [password]="password" [showAddOption]="false">
+    <app-cards (refreshPasswords)="fetchPasswords()" *ngFor="let password of passwordsFiltered()" [password]="password"
+      [showAddOption]="false" class="min-h-32">
     </app-cards>
-    <app-cards (refreshPasswords)="fetchPasswords()" [showAddOption]="true">
+    <app-cards (refreshPasswords)="fetchPasswords()" [showAddOption]="true" class="min-h-32">
     </app-cards>
   </div>
 </main>
